--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 :root {
   --color: #eeee;
   --scolor: #393e46;
-  --tcolor: #00848b;
+  --tcolor: #2c5caf;
   --bgcolor: #222831;
   --font: "Pathway Extreme";
 }
@@ -15,13 +15,16 @@
   font-family: var(--font);
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
-  user-select: contain;
   color: var(--color);
 }
 
 ::selection {
   background-color: var(--scolor);
   color: var(--tcolor);
+}
+
+img {
+  user-select: none;
 }
 
 body {
@@ -33,7 +36,7 @@ body {
   background-color: var(--tcolor);
   height: 5rem;
   width: 100%;
-  border-bottom: 5px solid #006f75;
+  border-bottom: 5px solid #3873da;
   display: flex;
   align-items: center;
 }
@@ -58,15 +61,68 @@ body {
   display: none;
 }
 
+/* MENU END HERE  */
+
+#main {
+  width: 80%;
+  margin: auto;
+  display: block;
+}
+
+#story {
+  margin: 10px auto 0 auto;
+  display: block;
+  text-align: center;
+}
+
+#story h1 {
+  font-size: 200%;
+  color: rgb(255, 38, 0);
+}
+
+#story p {
+  font-size: 150%;
+  line-height: 2;
+}
+
+#maincontent {
+  margin-top: 10px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main_child {
+  margin: 10px 4px;
+  width: 300px;
+  height: max-content;
+  font-size: 0.8rem;
+  text-align: center;
+  transition: 0.5s ease;
+  border: 0.2rem solid transparent;
+  padding: 0.2rem;
+}
+
+.main_child img {
+  width: 100%;
+  pointer-events: none;
+  margin-bottom: 10px;
+}
+
+.main_child:hover {
+  opacity: 0.9;
+  border: 0.2rem solid rgba(255, 255, 255, 0.2);
+  border-bottom-right-radius: 2.5rem;
+}
+
 @media (max-width: 800px) {
   #menu {
     display: block;
   }
 
-  #image_logo {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+  .logomobile {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
   }
 
   #menu_child {
@@ -88,7 +144,7 @@ body {
   }
 
   #menu_child a:hover {
-    background-color: #00a9b1;
+    background-color: #3872d7;
   }
 
   #check:checked ~ #menu_child {
@@ -96,10 +152,40 @@ body {
   }
 
   #labelmenu img {
-    width: 2rem;
+    width: 1.8rem;
     position: absolute;
-    left: 1rem;
-    top: 1.2rem;
+    left: 10px;
+    top: 15px;
     cursor: pointer;
+  }
+
+  #main {
+    width: 100%;
+  }
+
+  #story {
+    display: block;
+  }
+
+  #story img {
+    width: 100%;
+  }
+  .main_child {
+    margin: 10px 0;
+    width: 100%;
+    height: max-content;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+
+  .main_child img {
+    width: 100%;
+    border-radius: 5px;
+    pointer-events: none;
+    margin-bottom: 10px;
+  }
+
+  .main_child:hover {
+    border: 0.2rem solid rgba(255, 255, 255, 0);
   }
 }
