--- a/css/main.css
+++ b/css/main.css
@@ -110,9 +110,8 @@ body {
 }
 
 .main_child:hover {
-  opacity: 0.9;
-  border: 0.2rem solid rgba(255, 255, 255, 0.2);
-  border-bottom-right-radius: 2.5rem;
+  opacity: 0.8;
+  background-color: var(--scolor);
 }
 
 @media (max-width: 800px) {
