--- a/css/main.css
+++ b/css/main.css
@@ -151,7 +151,17 @@ h2 {
 @media (max-width: 800px) {
   #menu {
     display: block;
+    position: relative;
+    z-index: 3;
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.8);
   }
+
+  #check {
+    bottom: 10px;
+    left: 10px;
+    z-index: 1000;
+  }
+  
 
   .logomobile {
     display: flex;
@@ -160,19 +170,23 @@ h2 {
   }
 
   #menu_child {
-    position: absolute;
-    top: 5rem;
+    position: fixed;
+    top: 0;
+    right: -90px;
     background-color: var(--tcolor);
-    height: calc(100vh - 5rem);
+    box-shadow: 0 0 90px rgba(0, 0, 0, 0.8);
+    height: 100vh;
     width: 100%;
-    left: -100%;
-    transition: all 0.5s;
+    z-index: 3;
+    transform: translateX(100%);
+    transition: transform 0.5s;
   }
 
   #menu_child a {
     display: block;
     padding: 20px 0px;
-    text-align: center;
+    padding-left: 40px;
+    text-align: left;
     border-bottom: 0.1px solid rgba(255, 255, 255, 0.5);
     margin: 0;
   }
@@ -182,8 +196,10 @@ h2 {
   }
 
   #check:checked ~ #menu_child {
-    left: 0;
+    z-index: 999;
+    transform: translateX(2%);
   }
+
 
   #labelmenu img {
     width: 1.8rem;
