--- a/css/main.css
+++ b/css/main.css
@@ -1,241 +1,63 @@
-@import url("https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-:root {
-  --color: #eeee;
-  --scolor: #393e46;
-  --tcolor: #2c5caf;
-  --bgcolor: #222831;
-  --font: "Pathway Extreme";
-}
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: var(--font);
-  text-decoration: none;
-  -webkit-tap-highlight-color: transparent;
-  color: var(--color);
-}
-
-::selection {
-  background-color: var(--scolor);
-  color: var(--tcolor);
-}
-
-img {
+  font-family: "Open Sans";
+  -webkit-user-select: none;
   user-select: none;
-  border-radius: 9px;
+  -webkit-tap-highlight-color: transparent;
+  box-sizing: border-box;
 }
 
 body {
-  font-size: 10px;
-  background-color: var(--bgcolor);
-}
-
-#menu {
-  background-color: var(--tcolor);
-  height: 5rem;
-  width: 100%;
-  border-bottom: 5px solid #3873da;
-  display: flex;
-  align-items: center;
-}
-
-#menu a {
-  color: var(--color);
-  font-size: 1rem;
-  font-weight: 800;
-  background-color: none;
-  margin: 10px;
-  transition: all 0.2s;
-  box-shadow: none;
-}
-
-#menu a:hover {
-  color: white;
-  text-shadow: 0 0 1px rgba(255, 255, 255, 0.1),
-               0 0 2px rgba(255, 255, 255, 0.1),
-               0 0 3px rgba(255, 255, 255, 0.1),
-               0 0 4px rgba(255, 255, 255, 0.1),
-               0 0 5px rgba(255, 255, 255, 0.1),
-               0 0 6px rgba(255, 255, 255, 0.1);
-}
-
-#image_logo {
-  width: 10.9rem;
-  pointer-events: none;
-  user-select: none;
-}
-
-#check {
-  display: none;
-}
-
-/* MENU END HERE  */
-
-#main {
   width: 80%;
   margin: auto;
   display: block;
 }
 
-#story {
-  margin: 10px auto 0 auto;
-  display: block;
-  text-align: center;
+a {
+  color: black;
+  text-decoration: none;
+}
+.mainheading {
+  margin: 10px;
+  color: rgb(40, 0, 40);
 }
 
-#story h1 {
-  font-size: 200%;
-  color: rgb(255, 38, 0);
+.mainibody{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
-#story p {
-  font-size: 150%;
-  line-height: 2;
+h4 {
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 10px;
+  width: 300px;
 }
 
-#maincontent {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
-  display: flex;
-  flex-wrap: wrap;
+h4:hover {
+  opacity: 0.7;
 }
 
-.main_child {
-  margin: 10px 4px;
-  width: 340px;
-  border-radius: 9px;
-  height: 340px;
-  font-size: 0.8rem;
-  text-align: center;
-  transition: 0.5s ease;
-  border: 0.2rem solid transparent;
-  padding: 0.2rem;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  position: relative;
+h2{
+    text-align: center;
+    margin: 30px 0;
 }
 
-.main_child::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 20%; /* adjust as needed */
-  background: linear-gradient(to bottom, transparent, #222831);
-  pointer-events: none;
-}
-
-
-.main_child img {
-  width: 100%;
-  pointer-events: none;
-  margin-bottom: 10px;
-}
-
-.main_child:hover {
-  background-color: var(--scolor);
-}
-
-h2 {
-  margin-bottom: 5px;
+p{
+    line-height: 2.5;
 }
 
 @media (max-width: 800px) {
-  #menu {
-    display: block;
-    position: relative;
-    z-index: 3;
-    box-shadow: 0 0 9px rgba(0, 0, 0, 0.8);
-  }
-
-  #check {
-    bottom: 10px;
-    left: 10px;
-    z-index: 1000;
-  }
-  
-
-  .logomobile {
-    display: flex;
-    justify-content: center;
-    padding-top: 10px;
-  }
-
-  #menu_child {
-    position: fixed;
-    top: 0;
-    right: -90px;
-    background-color: var(--tcolor);
-    box-shadow: 0 0 90px rgba(0, 0, 0, 0.8);
-    height: 100vh;
-    width: 100%;
-    z-index: 3;
-    transform: translateX(100%);
-    transition: transform 0.5s;
-  }
-
-  #menu_child a {
-    display: block;
-    padding: 20px 0px;
-    padding-left: 40px;
-    text-align: left;
-    border-bottom: 0.1px solid rgba(255, 255, 255, 0.5);
-    margin: 0;
-  }
-
-  #menu_child a:hover {
-    background-color: #3872d7;
-  }
-
-  #check:checked ~ #menu_child {
-    z-index: 999;
-    transform: translateX(2%);
-  }
-
-
-  #labelmenu img {
-    width: 1.8rem;
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    cursor: pointer;
-  }
-
-  #main {
+  body {
     width: 100%;
   }
 
-  #story {
-    display: block;
-  }
-
-  #story img {
+  h4{
     width: 100%;
-  }
-  .main_child {
-    margin: 10px 0;
-    width: 100%;
-    height: max-content;
-    font-size: 0.8rem;
-    text-align: center;
-  }
-
-  .main_child img {
-    width: 100%;
-    border-radius: 5px;
-    pointer-events: none;
-    margin-bottom: 10px;
-  }
-
-  .main_child:hover {
-    border: 0.2rem solid rgba(255, 255, 255, 0);
   }
 }
+
