--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Pathway+Extreme:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans";
+  font-family: "Pathway Extreme";
   -webkit-user-select: none;
   user-select: none;
   -webkit-tap-highlight-color: transparent;
@@ -14,41 +13,46 @@ body {
   width: 80%;
   margin: auto;
   display: block;
+  background-color: black;
+  color: white;
 }
 
 a {
-  color: black;
+  color: white;
   text-decoration: none;
 }
 .mainheading {
   margin: 10px;
-  color: rgb(40, 0, 40);
+  color: rgb(255, 184, 255);
 }
 
-.mainibody{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.mainibody {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 h4 {
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
   padding: 10px;
   border-radius: 10px;
   width: 300px;
+  margin: 8px;
 }
 
 h4:hover {
   opacity: 0.7;
 }
 
-h2{
-    text-align: center;
-    margin: 30px 0;
+h2 {
+  text-align: center;
+  margin: 30px 0;
+  color: rgb(255, 184, 255);
 }
 
-p{
-    line-height: 2.5;
+p {
+  line-height: 2.5;
 }
 
 @media (max-width: 800px) {
@@ -56,8 +60,8 @@ p{
     width: 100%;
   }
 
-  h4{
+  h4 {
     width: 100%;
+    margin: 10px 0;
   }
 }
-
