--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -21,10 +21,13 @@ body * {
 }
 
 #menu {
-  background-color: rgb(17, 17, 17);
-  height: 100px;
+  background-color: rgb(30, 30, 30);
+  height: 80px;
   display: flex;
   align-items: center;
+  box-shadow: 0px 0px 50px 0.5px rgba(255, 255, 255, 0.200);
+  border-bottom: 0.4px solid rgba(255, 255, 255, 0.150);
+  margin-bottom: 50px;
 }
 
 .menulogo {
@@ -38,21 +41,7 @@ body * {
 
 .menuitems a {
   margin: 10px;
-}
-
-.menuitems a:hover {
   border-bottom: 0.5px solid white;
-}
-
-::-webkit-scrollbar {
-  background-color: gray;
-  height: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(255, 255, 255);
-  border-radius: 5px;
-  width: 50px;
 }
 
 @media (max-width: 800px) {
